Fix so new todos will have text contrast

--- a/css/index.scss
+++ b/css/index.scss
@@ -120,5 +120,7 @@ h1{
 
 #change-color {
   position: fixed;
-  top: 1em;
+  bottom: 0;
+  right: 0;
+  margin: 15px;
 }
